@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/pets.c: Always mark inventory objects as FLAG_NO_DROP, not only
+ objects created from randomitems attribute.
+Andreas Kirschbaum 2007-09-16
+
 Add a message when explore mode is disabled. Add help file for this command.
  lib/Makefile.am
  server/c_misc.c
